Fixed a huge bug where it wouldn't work with more than 1 input on the page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <body>
         <input type="text" value="" placeholder="Hello" />
+        <input type="text" value="" placeholder="Howdy" />
 
     </body>
 
