Closures to make sure right input is targetted, using data attributes to store colour. Colour is still WIP

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <body>
         <input type="text" value="" placeholder="Hello" />
-        <input type="text" value="" placeholder="Howdy" />
+        <input type="text" value="" placeholder="Howdy" style="color: red" />
 
     </body>
 
